#********************************************************************************
# Copyright (c) 2022 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[workspace]

members = [
    "kuksa_databroker/databroker",
    "kuksa_databroker/databroker-proto",
    "kuksa_databroker/databroker-cli",
    "kuksa_databroker/databroker-examples",
]

[workspace.dependencies]
clap = { version = "3.1.10", default-features = false, features = [
    "std",
    "env",
] }
databroker-proto = { path = "kuksa_databroker/databroker-proto" }
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.17.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tokio-stream = { version = "0.1.8", features = ["sync", "net"] }
tonic = "0.8"
tonic-build = "0.8"

[profile.release]
lto = true                 # Link time optimization (dead code removal etc...)
opt-level = "s"
codegen-units = 1
incremental = false
# debug = true               # for profiling (turn off otherwise)
# split-debuginfo = "packed" # only enable when `debug = true``
