#********************************************************************************
# Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License 2.0 which is available at
# http://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
#*******************************************************************************/

[workspace]

members = [
    "kuksa_databroker/databroker",
    "kuksa_databroker/databroker-proto",
    "kuksa_databroker/databroker-cli",
    "kuksa_databroker/databroker-examples",
]

[workspace.dependencies]
clap = "3.1.10"
databroker-proto = { path = "kuksa_databroker/databroker-proto" }
prost = "0.11"
prost-types = "0.11"
tokio = "1.17.0"
tokio-stream = "0.1.8"
tonic = "0.8"
tonic-build = "0.8"

[profile.release]
lto = true                 # Link time optimization (dead code removal etc...)
opt-level = "s"
codegen-units = 1
incremental = false
strip = true
# debug = true               # for profiling (turn off otherwise)
# split-debuginfo = "packed" # only enable when `debug = true``
