[metadata]
name = kuksa_client
author = Sebastian Schildt, Naresh Nayak, Wenwen Chen
author_email = sebastian.schildt@de.bosch.com, naresh.nayak@de.bosch.com, wenwen.chen@de.bosch.com
description = kuksa.val python client and SDK
long_description = file:README.md
long_description_content_type = text/markdown
url=https://github.com/eclipse/kuksa.val
project_urls=
  Source=https://github.com/eclipse/kuksa.val
  Bug Tracker=https://github.com/eclipse/kuksa.val/issues
classifiers = 
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent
    Topic :: Software Development
    
license_file = LICENSE

[options]
python_requires = >=3.6
install_requires=
    websockets~=8.1
    importlib_metadata >= 3.6
include_package_data = True

[options.entry_points]
twine.registered_commands =
    s3 = kuksa_client.s3:main
console_scripts =
    kuksa_client = kuksa_client.__main__:main
