[metadata]
name = kuksa_viss_client
author = Sebastian Schildt, Naresh Nayak, Wenwen Chen
author_email = sebastian.schildt@de.bosch.com, naresh.nayak@de.bosch.com, wenwen.chen@de.bosch.com
description = kuksa.val python clients and SDK
long_description = file:kuksa_viss_client/README.md
long_description_content_type = text/markdown
url=https://github.com/eclipse/kuksa.val
project_urls=
  Source=https://github.com/eclipse/kuksa.val/tree/master/kuksa_viss_client
  Bug Tracker=https://github.com/eclipse/kuksa.val/issues
classifiers = 
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent
    Topic :: Software Development
    
license_file = LICENSE

[options]
python_requires = >=3.6
install_requires=
    websockets~=8.1
    cmd2~=1.4
    pygments~=2.5
    importlib_metadata >= 3.6
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    kuksa_viss_client = kuksa_viss_client.__main__:main
    kuksa_s3_client = kuksa_viss_client.s3.__main__:main
