[build-system]
requires = [
    "grpcio-tools>=1.46.0",
    "setuptools>=42",
    "setuptools-git-versioning",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
starting_version = "0.1.6"
tag_filter = "[0-9]+.[0-9]+.[0-9]+"

[tool.pylint.design]
max-args = 8
max-attributes = 12

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "fixme",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-member",
    "too-few-public-methods",
]

[tool.pytest.ini_options]
timeout = 60
