[build-system]
requires = [
    "grpcio-tools>=1.54.2",
    "setuptools>=42",
    "setuptools-git-versioning",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
# Starting version is just a dummy value that never shall be used in CI
starting_version = "0.0.0"

[tool.pylint.design]
max-args = 8
max-attributes = 12

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "fixme",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-member",
    "too-few-public-methods",
]

[tool.pytest.ini_options]
timeout = 60
