[metadata]
name = kuksa_client
author = Eclipse KUKSA Project
author_email = kuksa-dev@eclipse.org
description = KUKSA Python Client and SDK
long_description = file:./README.md
long_description_content_type = text/markdown
url=https://github.com/eclipse/kuksa.val
project_urls=
  Source=https://github.com/eclipse/kuksa.val/tree/master/kuksa-client
  Bug Tracker=https://github.com/eclipse/kuksa.val/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development

license_files =
    LICENSE

[options]
python_requires = >=3.8
install_requires =
    websockets >= 10.1
    cmd2 >= 1.4, <2.0
    pygments >= 2.5
    grpcio-tools >= 1.54.2
    jsonpath-ng >= 1.5.3
packages = find:

[options.extras_require]
test =
    pylint
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock
    pytest-timeout

[options.package_data]
kuksa_client =
    logging.ini
    logo
kuksa_certificates =
    *
    jwt/*

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    kuksa-client = kuksa_client.__main__:main
