[metadata]
name = kuksa_viss_client
author = Sebastian Schildt, Naresh Nayak, Wenwen Chen
author_email = sebastian.schildt@de.bosch.com, naresh.nayak@de.bosch.com, wenwen.chen@de.bosch.com
description = kuksa.val python clients and SDK
long_description = file:./README.md
long_description_content_type = text/markdown
url=https://github.com/eclipse/kuksa.val
project_urls=
  Source=https://github.com/eclipse/kuksa.val/tree/master/kuksa_viss_client
  Bug Tracker=https://github.com/eclipse/kuksa.val/issues
classifiers = 
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development
    
license_file = ./LICENSE

[options]
python_requires = >=3.8
install_requires=
    websockets~=10.1
    cmd2~=1.4
    pygments~=2.5
    importlib_metadata >= 3.6
    grpcio ~= 1.46.0
    grpcio-tools ~= 1.46.0
    jsonpath-ng  ~= 1.5.3
#packages = find:

      
include_package_data = True


[options.packages.find]
where = kuksa-val-server/protos

[options.entry_points]
console_scripts =
    kuksa_viss_client = kuksa_viss_client.__main__:main
